--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <article>
                             <h3>Commenting vs Documenting Code</h3>
                                 <p>Comments are created in Python using the pound sign (#) and should be brief statements no longer than a few sentences. Here’s a simple example:</p>
-                                <p>When you write code, you write it for two primary audiences: your users and your developers (including yourself).
+                                <p>hi you write code, you write it for two primary audiences: your users and your developers (including yourself).
                                      Both audiences are equally important. If you’re like me, you’ve probably opened up old codebases 
                                      and wondered to yourself, “What in the world was I thinking?” If you’re having a problem reading your own code,
                                       imagine what your users or other developers are experiencing when they’re 
